# AgenticRAG

./: .gitignore  AGENTS.md  Makefile  README.md
backend/: .env.example  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_add_document_version_content_text.py  0003_eval_case_expectations.py
backend/app/: main.py
backend/app/agent/: __init__.py  evidence.py  executor.py  filtering.py  interfaces.py  models.py  policy.py  query_analysis.py  rewrite.py  routing.py  state_machine.py
backend/app/api/: deps.py  error_handlers.py  routes.py
backend/app/core/: config.py  constants.py  errors.py  resilience.py
backend/app/db/: models.py  session.py
backend/tests/: conftest.py  test_agent_conflict.py  test_agent_executor_limits.py  test_agent_fallbacks.py  test_agent_policy_state_machine.py  test_agent_state_machine.py  test_agent_trace_api.py  test_answer_generator_llm_provider.py  test_api_integration.py  test_api_smoke.py  test_chunking.py  test_citation_and_abstain.py  test_error_and_health.py  test_eval_api.py  test_eval_runner.py  test_evidence_filter.py  test_interfaces.py  test_llm_config_and_factory.py  test_llm_openai_compatible_provider.py  test_pgvector_retrieval.py  test_postgres_persistence.py  test_provider_settings_api.py  test_query_analysis.py  test_query_router.py  test_reranker_config_and_factory.py  test_reranker_http_provider.py  test_resilience.py  test_retrieval_rerank_hook.py  test_route_provider_factory.py  test_route_retrievers.py  test_smoke.py
evals/: README.md
(+159 files in other folders)
